Project has been migrated by JB to be more stable than previous releases, so now is safe to pass around, also needed to move from static enum cache to ProjectService. Remove deprecated code.